@@ -87,6 +87,7 @@ SVN trunk (1.1+svn):
    * backport latest SDL_ttf change, fix ascender/descender issue for DejaVu
    * fix crash when using zoom keys in the main lobby
    * new utils: codecomp codeextract codeglyphs codelist, for font analysis
+   * login names in MP is now limited to 18 characters
 
 Version 1.1:
  * campaign server
